# ai-semester-2

./: .gitignore  README.md  environment.yml  pyproject.toml
Рабочая тетрадь №1/: notebook.ipynb  solution.ipynb  template.ipynb
Рабочая тетрадь №1/data/: apple.csv  google.csv  microsoft.csv
Рабочая тетрадь №2/: notebook.ipynb  template.ipynb
Рабочая тетрадь №3/: solution.ipynb  template.ipynb
Рабочая тетрадь №4/: solution.ipynb
Рабочая тетрадь №5/: notebook.ipynb
Рабочая тетрадь №6/: notebook.ipynb
Рабочая тетрадь №7/: notebook.ipynb
Рабочая тетрадь №8/: notebook.ipynb
