[tool.poetry]
name = "искусственный интеллект"
version = "0.1.0"
description = ""
authors = ["Artem <burenotti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
scikit-learn = "^1.2.2"
pandas = "^2.0.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"
networkx = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
